Fix "Open with Preview" menu item in PDF context menus on Big Sur https://bugs.webkit.org/show_bug.cgi?id=219986 <rdar://problem/72406073>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-12-17
Reviewed by Geoffrey Garen.

In r266654 I removed the ability for the web process to open a PDF in Preview on Big Sur.
I overlooked the fact that context menus also allow you to open a PDF in Preview,
which this fixes by having the UI process initiate the Preview opening if the user clicks on
the context menu item with the correct index.

* Shared/mac/PDFContextMenu.h:
(WebKit::PDFContextMenu::encode const):
(WebKit::PDFContextMenu::decode):
* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:
* UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::showPDFContextMenu):
* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::handleContextMenuEvent):

Canonical link: https://commits.webkit.org/232569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270946 268f45cc-cd09-0410-ab3c-d52691b4dbfc